<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_failed_to_load">Failed to load Image Classifier Image</string>
    <string name="select_an_image_to_analyze">Select an image to analyze</string>
</resources>