<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".view.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/white"
        android:padding="16dp">

        <!-- Title of the Result -->
        <TextView
            android:id="@+id/result_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <!-- CardView for Image Result -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/gallery"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_place_holder"
                android:layout_gravity="center"/>
        </androidx.cardview.widget.CardView>

        <!-- Subtitle or Description for the Result -->
        <TextView
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="#FF5722"
            android:layout_marginBottom="8dp"/>

        <!-- Result Score -->
        <TextView
            android:id="@+id/result_score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#388E3C"/>

        <!-- Inference Time Description -->
        <TextView
            android:id="@+id/inference_time_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textSize="16sp"
            android:textColor="#888"
            android:layout_marginBottom="24dp"/>
    </LinearLayout>
</ScrollView>
